--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,27 +6,76 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    />
+      />
     <link rel="stylesheet" href="css/index.css" />
     <title>Task Manager|Home</title>
   </head>
   <body>
+    {{>spinner}}
+    <section id="login" class="login-section">
+      <div class="login-area">
+        <div class="crossLoginHeader">
+          <h1>Welocome To Task Manager</h1>
+          <div class="taskCross">
+            <span class="cross"><i class="fa-solid fa-xmark"></i></span>
+          </div>
+        </div>
+        <div class="main-login">
+          <img src="./assets/taskImg.jpg" alt="task image" />
+          <form class="login-form">
+            <div class="login-inputs">
+              <input class="loginEmail" type="text" placeholder="Email" />
+              <input class="loginPassword" type="password" placeholder="Password" />
+            </div>
+            <button class="submitBtn" type="submit">Sign in</button>
+            <p>Don't have an account? <span class="loginbarlink">Sign up</span> </p>
+          </form>
+        </div>
+      </div>
+    </section>
+    <section id="signup" class="signup-section">
+      <div class="signup-area">
+        <div class="crossSignupHeader"><h1>Welocome To Task Manager</h1>
+          <div class="taskCross">
+            <span class="cross"><i class="fa-solid fa-xmark"></i></span>
+          </div></div>
+
+        <div class="main-signup">
+          <img src="./assets/taskImg.jpg" alt="task image" />
+          <form class="signup-form">
+            <div class="signup-inputs">
+              <input class="username" type="text" placeholder="Username" />
+              <input class="age" type="number" placeholder="Age" />
+              <input class="signupEmail" type="email" placeholder="Email" />
+              <input class="signupPassword" type="password" placeholder="Password" />
+            </div>
+            <button class="submitBtn" type="submit">Sign up</button>
+            <p>Already have an account? <span class="signupbarlink">Sign in</span></p>
+          </form>
+        </div>
+      </div>
+    </section>
     <section class="navbar-area">
       <div class="navbar">
         <nav class="navbar-nav">
-          <div class="brandLogo">
-            <img src="./assets/taskImg2.jpg" alt="brand logo" />
-          </div>
+          <div class="barnav">
+        <div class="brandLogo">
+          <img src="/assets/taskImg2.jpg" alt="brand logo" />
+        </div>
+        <div class="bar">
+          <span class="barIcon">
+            <i class="fa-solid fa-bars"></i>
+          </span>
+          <span class="crossBarIcon">
+            <i class="fa-solid fa-xmark"></i>
+          </span>
+        </div></div>
           <div class="nav-links">
             <ul>
               <div class="nav-link-div">
                 <span><i class="fa-solid fa-house"></i></span>
                 <li class="nav-link">Home</li>
               </div>
-              <!-- <div class="nav-link-div">
-                <span><i class="fa-solid fa-list-check"></i></span>
-                <li class="nav-link">Tasks</li>
-              </div> -->
               <div class="nav-link-div">
                 <span><i class="fa-solid fa-address-card"></i></span>
                 <li class="nav-link">About Us</li>
@@ -35,24 +84,15 @@
                 <span><i class="fa-solid fa-list-check"></i></span>
                 <li class="nav-link">Contact Us</li>
               </div>
-              <a href="/login">
-                <div class="nav-link-div">
-                  <span><i class="fa-solid fa-right-to-bracket"></i></span>
-                  <li class="nav-link">Sign in</li>
-                </div></a>
-              <a href="/signup">
-                <button class="signupbtn nav-link-div">
-                  <span><i class="fa-solid fa-user-plus"></i></span>
-                  <li class="nav-link">Start For Free</li>
-                </button></a>
+              <div class="loginBtn nav-link-div">
+                <span><i class="fa-solid fa-right-to-bracket"></i></span>
+                <li class="nav-link">Sign in</li>
+              </div>
+              <div class="signupbtn nav-link-div">
+                <span><i class="fa-solid fa-user-plus"></i></span>
+                <li class="nav-link">Start For Free</li>
+              </div>
             </ul>
-            <!-- <form class="seach-bar searchForm">
-              <input type="search" placeholder="Search" name="searchbar" />
-              <a type="button" href=""
-                ><span class="searchIcon"
-                  ><i class="fa-solid fa-magnifying-glass"></i></span
-              ></a>
-            </form> -->
           </div>
         </nav>
       </div>
@@ -76,7 +116,9 @@
             </p>
           </div>
           <div class="joinBtn">
-            <a type="button" href="/signup"> Start For Free </a>
+            <span >
+               Start For Free
+            </span>
           </div>
         </div>
         <div class="sec-div">
@@ -114,93 +156,17 @@
             </div>
             <div class="lastdiv-quote">
               <h2>
-                Once you have mastered time, you will understand how true it is
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, accusantium?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, natus?
+                {{!-- Once you have mastered time, you will understand how true it is
                 that most people overestimate what they can accomplish in a year
-                - and underestimate what they can achieve in a decade
+                - and underestimate what they can achieve in a decade --}}
               </h2>
             </div>
           </div>
         </div>
       </main>
     </section>
-    <section class="footer-area">
-      <div class="footer">
-        <footer class="footer-foot">
-          <div class="about">
-            <div class="info-icons">
-              <span class="globe">
-                <i class="fa-solid fa-globe"></i>
-              </span>
-              <span class="check">
-                <i class="fa-solid fa-list-check"></i>
-              </span>
-              <span class="clipboard-check">
-                <i class="fa-solid fa-clipboard-check"></i>
-              </span>
-            </div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam
-              itaque maiores excepturi assumenda ab nam eius quos beatae modi
-              hic.
-            </p>
-          </div>
-          <div class="other-info">
-            <div class="contacts">
-              <h3>Contacts</h3>
-              <ul>
-                <a
-                  href="https://www.linkedin.com/in/omkarsase/"
-                  target="_blank"
-                >
-                  <div class="social-icons linkedin">
-                    <span><i class="fa-brands fa-linkedin-in"></i></span>
-                    <li>Linkedin</li>
-                  </div>
-                </a>
-                <a href="mailto:saseomkar214@gmail.com" target="_blank">
-                  <div class="social-icons mail">
-                    <span>
-                      <i class="fa-solid fa-envelope"></i>
-                    </span>
-                    <li>Email</li>
-                  </div>
-                </a>
-                <a href="https://www.instagram.com/_omkarsase/" target="_blank">
-                  <div class="social-icons instagram">
-                    <span><i class="fa-brands fa-instagram"></i></span>
-                    <li>Instagram</li>
-                  </div>
-                </a>
-                <a href="https://twitter.com/_OmkarSase" target="_blank">
-                  <div class="social-icons twitter">
-                    <span>
-                      <i class="fa-brands fa-twitter"></i>
-                    </span>
-                    <li>Twitter</li>
-                  </div>
-                </a>
-              </ul>
-            </div>
-            <div class="features">
-              <h3>Featuers</h3>
-              <ul>
-                <li>How It Works</li>
-                <li>Pricing</li>
-                <li>Templates</li>
-              </ul>
-            </div>
-            <div class="company">
-              <h3>Company</h3>
-              <ul>
-                <li>About us</li>
-                <li>Privacy</li>
-                <li>Terms & Conditions</li>
-              </ul>
-            </div>
-          </div>
-        </footer>
-      </div>
-    </section>
+    {{>footer}}
     <script src="/js/index.js"></script>
   </body>
 </html>
