added sorting functionality and contact us page

--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -28,21 +28,28 @@
             <span><i class="fa-solid fa-address-card"></i></span>
             <li class="nav-link">About Us</li>
           </div>
-          <div class="nav-link-div">
-            <span><i class="fa-solid fa-list-check"></i></span>
-            <li class="nav-link">Contact Us</li>
-          </div>
+          <a href="/contact">
+            <div class="nav-link-div">
+              <span><i class="fa-solid fa-list-check"></i></span>
+              <li class="nav-link">Contact Us</li>
+            </div>
+          </a>
           <div class="accountNav nav-link-div">
             <span><i class="fa-solid fa-user"></i></span>
             <li class="nav-link">My Account</li>
           </div>
         </ul>
-        <form class="seach-bar searchForm">
-          <input type="search" placeholder="Search" name="searchbar" />
+        <div class="seach-bar searchForm">
+          <input
+            id="searchInput"
+            type="search"
+            placeholder="Search"
+            name="searchbar"
+          />
           <a type="button" href=""><span class="searchIcon"><i
                 class="fa-solid fa-magnifying-glass"
               ></i></span></a>
-        </form>
+        </div>
       </div>
     </nav>
   </div>
