--- a/public/css/index.css
+++ b/public/css/index.css
@@ -317,6 +317,7 @@ main h2 {
     height: 100vh;
     width: 100%;
     display: none;
+    z-index: 10000;
 }
 
 .lds-hourglass {
@@ -473,6 +474,24 @@ button {
 .signup-section img {
     max-width: 400px;
 
+}
+
+/* //scroll  */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 /* //media queries  */
