--- a/public/css/tasks.css
+++ b/public/css/tasks.css
@@ -56,8 +56,56 @@ body {
 }
 
 
+
 /* add task model section  */
-header h1 {
+
+.views {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: 20px 0px 20px 0;
+    gap: 15px;
+    width: 95%;
+}
+
+.sortTasks,
+.viewTasks {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    display: none;
+}
+
+
+.viewTitle {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+select {
+    cursor: pointer;
+    padding: 7px 20px;
+    background-color: tomato;
+    font-size: 20px;
+    outline: none;
+    color: white;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+}
+
+select option {
+    width: 100%;
+    color: black;
+    background-color: white;
+    padding: 10px 15px;
+
+}
+
+h1 {
     text-align: center;
     margin: 20px 0 50px;
     font-size: 35px;
@@ -186,8 +234,13 @@ button {
 }
 
 /* all task section  */
+
+.header {
+    display: none;
+}
+
 .allTasksArea {
-    background-color: whitesmoke;
+    background-color: white;
     padding: 0 0 100px 0;
     min-height: 100vh;
 
@@ -225,7 +278,7 @@ button {
     width: 400px;
     min-width: 30px;
     max-width: 400px;
-    border: 5px solid rgb(135, 51, 37);
+    border: 1px solid navy;
     height: 300px;
     min-height: 250px;
     padding: 25px 20px 25px 30px;
@@ -267,6 +320,33 @@ button {
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+.listTask {
+    display: flex;
+    width: 70%;
+    border: 1px solid navy;
+    padding: 10px 30px;
+    border-radius: 5px;
+    background-color: white;
+    /* color: white; */
+    justify-content: space-between;
+}
+
+.listTaskIcons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.listTaskHeading {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.listtaskdes {
+    font-size: 18px;
+    font-weight: 500;
 }
 
 
@@ -466,6 +546,8 @@ a {
     padding: 10px 20px;
     border-radius: 10px;
 }
+
+
 
 /* //footer area  */
 .footer-area {
@@ -720,6 +802,11 @@ a {
 
 /* // profile  */
 @media screen and (max-width:1045px) {
+
+    .profileSection {
+        overflow: scroll;
+    }
+
     .myprofile ul {
         flex-direction: row;
         flex-wrap: wrap;
@@ -764,5 +851,28 @@ a {
     .profileArea input {
         min-width: 10px;
         width: 280px;
+    }
+}
+
+@media screen and (max-width:1315px) {
+    .listTask {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width:750px) {
+    .listTask {
+        width: 95%;
+    }
+
+    .views {
+        flex-wrap: wrap;
+        padding: 13px 13px;
+    }
+}
+
+@media screen and (max-width:440px) {
+    .views {
+        justify-content: flex-start;
     }
 }
