--- a/templates/views/mytasks.hbs
+++ b/templates/views/mytasks.hbs
@@ -12,10 +12,10 @@
   </head>
   <body>
     {{>spinner}}
-    
+
     <div class="taskPen">
       <span class="pen">
-       <i class="pens fa-solid fa-plus"></i>
+        <i class="pens fa-solid fa-plus"></i>
       </span>
     </div>
     <div class="taskCross">
@@ -84,7 +84,7 @@
             </div>
             <div id="taskDueDate__input">
               <label for="taskUpdatedDueDate">Due Date</label>
-              <input type="date" name="taskUpdatedDueDate"
+              <input type="datetime-local" name="taskUpdatedDueDate"
                 id="taskUpdatedDueDate" required />
             </div>
             <div class="updateTask__input">
@@ -114,7 +114,8 @@
             </div>
             <div id="taskDueDate__input">
               <label for="taskDueDate">Due Date</label>
-              <input type="date" name="duedate" id="taskDueDate" required />
+              <input type="datetime-local" name="duedate" id="taskDueDate"
+                required />
             </div>
             <div class="addTask__input">
               <label for="taskDescription">Task Description</label>
@@ -129,12 +130,32 @@
       </div>
     </section>
     <section class="allTasksArea">
-      <header>
+      <header class="header">
         <h1>Welcome To Task Manager App</h1>
       </header>
+      <div class="views">
+        <div class="sortTasks">
+          <span class="viewTitle">Sort By</span>
+          <div class="optionSort">
+            <select name="sortBy" id="sortSelect">
+              <option value="newestFirst">Newest First</option>
+              <option value="oldestFirst">Oldest First</option>
+            </select>
+          </div>
+        </div>
+        <div class="viewTasks">
+          <span class="viewTitle">View as</span>
+          <div class="optionView">
+            <select name="viewBy" id="viewSelect">
+              <option value="board">Board</option>
+              <option value="list">List</option>
+            </select>
+          </div>
+        </div>
+      </div>
       <div class="taskList">
         <div class="tasks">
-
+          
         </div>
       </section>
       {{>footer}}
