--- a/public/css/tasks.css
+++ b/public/css/tasks.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;500&family=Aleo&family=Heebo&family=Oswald:wght@300&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
