--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -25,10 +25,12 @@
           <form class="login-form">
             <div class="login-inputs">
               <input class="loginEmail" type="text" placeholder="Email" />
-              <input class="loginPassword" type="password" placeholder="Password" />
+              <input class="loginPassword" type="password"
+                placeholder="Password" />
             </div>
             <button class="submitBtn" type="submit">Sign in</button>
-            <p>Don't have an account? <span class="loginbarlink">Sign up</span> </p>
+            <p>Don't have an account? <span class="loginbarlink">Sign up</span>
+            </p>
           </form>
         </div>
       </div>
@@ -47,7 +49,8 @@
               <input class="username" type="text" placeholder="Username" />
               <input class="age" type="number" placeholder="Age" />
               <input class="signupEmail" type="email" placeholder="Email" />
-              <input class="signupPassword" type="password" placeholder="Password" />
+              <input class="signupPassword" type="password"
+                placeholder="Password" />
             </div>
             <button class="submitBtn" type="submit">Sign up</button>
             <p>Already have an account? <span class="signupbarlink">Sign in</span></p>
@@ -59,17 +62,17 @@
       <div class="navbar">
         <nav class="navbar-nav">
           <div class="barnav">
-        <div class="brandLogo">
-          <img src="/assets/taskImg2.jpg" alt="brand logo" />
-        </div>
-        <div class="bar">
-          <span class="barIcon">
-            <i class="fa-solid fa-bars"></i>
-          </span>
-          <span class="crossBarIcon">
-            <i class="fa-solid fa-xmark"></i>
-          </span>
-        </div></div>
+            <div class="brandLogo">
+              <img src="/assets/taskImg2.jpg" alt="brand logo" />
+            </div>
+            <div class="bar">
+              <span class="barIcon">
+                <i class="fa-solid fa-bars"></i>
+              </span>
+              <span class="crossBarIcon">
+                <i class="fa-solid fa-xmark"></i>
+              </span>
+            </div></div>
           <div class="nav-links">
             <ul>
               <div class="nav-link-div">
@@ -110,14 +113,10 @@
               The key is in not spending time, but in investing it wisely and
               orderely
             </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Molestias, dolorem?
-            </p>
           </div>
           <div class="joinBtn">
-            <span >
-               Start For Free
+            <span>
+              Start For Free
             </span>
           </div>
         </div>
@@ -127,23 +126,24 @@
               <img src="./assets/task1Img.webp" alt="" />
             </div>
             <div class="div1-info">
-              <h1>Lorem ipsum dolor sit.</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, a perferendis
-                repellendus aliquam ab! Velit in fuga nemo saepe eius aliquid
-                temporibus, officia ad rem. Dolorum exercitationem, debitis
-                voluptatum inventore nesciunt adipisci ipsum ipsa eum laudantium
-                corrupti obcaecati, natus dicta at velit minus excepturi?
+              <h1 >
+                <p style="font-size: 30px;">
+                Get Your task organized at one place.</p>
+                <p style="font-size: 30px;">Start your new journey today with task manager</p>
+              </h1>
+              <p style="margin-top: 8px;">Your task list is automatically sorted into Today, Upcoming and
+                custom Filter views to help you focus on your most important
+                things.
+
               </p>
             </div>
           </div>
           <div class="div2-area">
             <div class="div2-info">
-              <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisiciti accusantium
-                velit dolorum ut adipisci libero cum, atque nam commodi iste
-                doloremque tempore neque laboriosam! Vel, sunt.
+              <h1 style="font-size: 35px;"><p style="font-size: 40px;">Get your Task Manager.</p>
+               <p style="font-size: 35px;">Make your life fast forward with Task Manager App.</p></h1>
+              <p style="margin-top: 8px;">
+               Get daily update of your tasks, Never miss out any opportunity adn Use your time efficiently.
               </p>
             </div>
             <div class="div2-img">
@@ -155,11 +155,8 @@
               <img src="./assets/lastTaskImg.webp" alt="" />
             </div>
             <div class="lastdiv-quote">
-              <h2>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, accusantium?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est, natus?
-                {{!-- Once you have mastered time, you will understand how true it is
-                that most people overestimate what they can accomplish in a year
-                - and underestimate what they can achieve in a decade --}}
+              <h2 style="font-size: 30px;">
+               You get to decide where your time goes. You can either spend it moving forward, or you can spend it putting out fires. You decide. And if you don’t decide, others will decide for you.
               </h2>
             </div>
           </div>
