--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -346,6 +346,7 @@ textarea {
         flex-direction: column;
         justify-content: center;
         gap: 50px;
+        margin-bottom: 50px;
     }
 }
 
