--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -3,7 +3,8 @@
     <nav class="navbar-nav">
       <div class="barnav">
         <div class="brandLogo">
-          <img src="/assets/taskImg2.jpg" alt="brand logo" />
+          <a href="/">
+            <img src="/assets/taskImg2.jpg" alt="brand logo" /></a>
         </div>
         <div class="bar">
           <span class="barIcon">
