--- a/templates/views/mytasks.hbs
+++ b/templates/views/mytasks.hbs
@@ -138,8 +138,8 @@
           <span class="viewTitle">Sort By</span>
           <div class="optionSort">
             <select name="sortBy" id="sortSelect">
-              <option value="newestFirst">Newest First</option>
-              <option value="oldestFirst">Oldest First</option>
+              <option value="newestFirst">Latest</option>
+              <option value="oldestFirst">Oldest</option>
             </select>
           </div>
         </div>
