--- a/templates/views/contact.hbs
+++ b/templates/views/contact.hbs
@@ -16,7 +16,9 @@
         <nav class="navbar-nav">
           <div class="barnav">
             <div class="brandLogo">
-              <img src="/assets/taskImg2.jpg" alt="brand logo" />
+              <a href="/">
+                <img src="/assets/taskImg2.jpg" alt="brand logo" /></a>
+
             </div>
             <div class="bar">
               <span class="barIcon">
